<!--
  ~ Copyright 2020 Cagatay Ulusoy (Ulus Oy Apps). All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">HMS Codelabs</string>
    <!-- Strings used for fragments for navigation -->

    <string name="account_kit_usage_process">Huawei Account Usage Process</string>
    <string name="account_kit_id_token_mode">ID-Token Mode SignIn</string>
    <string name="account_kit_auth_mode">AuthorizationCode Mode SignIn</string>
    <string name="account_kit_sign_out">SignOut</string>
    <string name="map_kit_permission_rationale">This codelab requires following permissions.</string>
    <string name="location_kit_request">Request Location Updates</string>
    <string name="location_kit_remove">Remove Location Updates</string>
    <string name="location_kit_location_update_removed">Location update removed.</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_analytic">AnalyticActivity</string>


    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="setting_button">Settings</string>
    <string name="next_button">Next</string>
    <string name="post_score_button">Post Score</string>
    <string name="save_setting_button">Save</string>
    <string name="q1">The largest planet in the solar system is Jupiter</string>
    <string name="q2">The first Olympic Games were held in Athens, Greece</string>
    <string name="q3">The violin has 6 strings</string>
    <string name="q4">Flying bats belong to birds</string>
    <string name="q5">Sound spreads faster in the water than in the air</string>
    <string name="wrong_answer">The answer is wrong.</string>
    <string name="correct_answer">The answer is correct.</string>
    <string name="title_activity_site">SiteActivity</string>
    <string name="title_activity_ads">AdsActivity</string>
    <string name="title_activity_push">PushActivity</string>
    <string name="title_activity_account_kit">Account Kit</string>
    <string name="title_activity_push_kit">Push Kit</string>
    <string name="title_activity_ads_kit">Ads Kit</string>
    <string name="title_activity_map_kit">Map Kit</string>
    <string name="title_activity_analytics_kit">Analytics Kit</string>
    <string name="title_activity_dtm_kit">DTM Kit</string>
    <string name="title_activity_site_kit">Site Kit</string>
    <string name="title_activity_location_kit">Location Kit</string>
    <string name="title_all_kits">All Kits</string>
    <string name="interstitial_display_picture">Show Picture</string>
    <string name="interstitial_display_video">Show Video</string>
    <string name="next_question_button">Next Question</string>
    <string name="quit_button">Quit</string>
    <string name="score_title">Your Score</string>

    <string name="title_welcome_msg">Welcome to HMS Codelabs \n \nPlease choose relevant kit</string>
    <string name="title_activity_analytic_article">AnalyticArticleActivity</string>


</resources>
