<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>


    <TextView
        android:id="@+id/txt_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_spacing_medium"
        android:layout_marginTop="@dimen/hiad_20_dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/account_kit_usage_process"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_id_token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txt_header"
        android:layout_margin="@dimen/size_spacing_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/account_kit_id_token_mode"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_auth_code_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_id_token"
        android:layout_margin="@dimen/size_spacing_medium"
        android:text="@string/account_kit_auth_mode"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_auth_code_mode"
        android:layout_margin="@dimen/size_spacing_medium"
        android:text="@string/account_kit_sign_out"/>

    <TextView
        android:id="@+id/txt_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_spacing_medium"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_out"
        tools:text ="" />

</androidx.constraintlayout.widget.ConstraintLayout>