<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_article_analytic"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="@+id/toolbar_article_analytic"
        app:layout_constraintRight_toRightOf="@+id/toolbar_article_analytic"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_article_analytic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="@dimen/hiad_16_dp"
        android:paddingLeft="@dimen/hiad_16_dp"
        android:paddingRight="@dimen/hiad_16_dp"
        android:paddingTop="100dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/txt_question"
            android:layout_marginBottom="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_question"
            android:id="@+id/rdg_options"
            android:clickable="true"
            android:layout_centerVertical="true">


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A"
                android:id="@+id/rdb_opt1"
                android:checked="false"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="B"
                android:id="@+id/rdb_opt2"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="C"
                android:id="@+id/rdb_opt3"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="D"
                android:id="@+id/rdb_opt4"
                android:checked="false" />

        </RadioGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_question_button"
            android:id="@+id/btn_nxt_question"
            android:layout_marginTop="27dp"
            android:layout_below="@+id/rdg_options"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="#FF5722"
            android:textColor="#ffffff"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quit_button"
            android:id="@+id/btn_quit"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/btn_nxt_question"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="#01579B"
            android:textColor="#ffffff" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:textAppearance="@color/abc_background_cache_hint_selector_material_dark"
            android:text="@string/score_title"
            android:id="@+id/txt_score"
            android:textColor="#000000"
            android:textSize="19dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:textAppearance="@color/abc_background_cache_hint_selector_material_dark"
            android:id="@+id/txt_score_value"
            android:text="0"
            android:textColor="#000000"
            android:layout_alignParentBottom="true"
            android:textAlignment="center"
            android:layout_alignParentRight="true"
            android:textSize="19dp" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>